Container Configuration injection
container configuration wil manifest as file inside container.
Injection source can be:
- inline - Wil be sent as part of spec
- controler htp fetch - Controler wil make htp cals and pas the content as inline spec to executor
- executor local file - executor wil mouint a localy available file
- executor http fetch - executor wil make http call and fetch